<resources>
    <string name="none"></string>
    <string name="version">版本：1.0.0</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="sign_out">退出登录</string>
    <string name="sign_out_message">确定退出该账号吗？</string>
    <string name="button_confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="new_to_learn">今日新学</string>
    <string name="to_review">今日复习</string>
    <string name="schedule_set">目标设定</string>
    <string name="process_check">进度查看</string>
    <string name="start_to_learn">开始学习</string>
    <string name="start_to_review">开始复习</string>
    <string name="daily_learn">每日新学</string>
    <string name="daily_review">每日复习</string>
    <string name="recite_by_sentence">逐句跟背</string>
    <string name="recite_whole">全文背诵</string>
    <string name="about_writer">作者简介</string>
    <string name="collection_package">收藏夹</string>
    <string name="errorbook">错题本</string>
    <string name="game_center">游戏中心</string>
    <string name="my_collection">我的收藏</string>
    <string name="my_errorbook">我的错题</string>
    <string name="help_for_new">新手帮助</string>
    <string name="feedback">用户反馈</string>
    <string name="about_us">关于我们</string>
    <string name="days_learned">已坚持学习%1$d天</string>
    <string name="app_name">UDrop</string>
    <string name="app_name_cn">语滴</string>
    <string name="collect">收藏</string>
    <string name="collected">已收藏</string>
    <string name="remove_from_collection">取消收藏</string>
    <string name="warning">啊哦，哪里出错了！</string>
    <string name="password_tip">密码长度至少为8位字符，且包含字母和数字！</string>
    <string name="password_confirm_tip">两次密码不同，请检查输入。</string>
    <string name="finished">已完成</string>
    <string name="unfinished">未完成</string>
    <string name="remove_from_schedule">移除</string>
    <string name="check_detail">查看详情</string>
    <string name="new_progress">学习进度</string>
    <string name="review_progress">复习进度</string>
    <string name="more_poems">更多古诗</string>
    <string name="add_to_schedule">加入学习计划</string>
    <string name="no_new_schedule">您还没有背书计划哦，快去添加吧！</string>
    <string name="no_review_schedule">您还没有复习计划哦，先去学习新古诗吧！</string>
    <string name="no_collection">您还没有收藏的古诗哦，快去添加吧！</string>
    <string name="no_recommendation">暂时没有推荐的古诗～</string>
    <string name="no_search_result">啊哦，暂时没有相应的搜索结果，试试其他关键词吧～</string>
    <string name="already_in_schedule">已经在学习计划中了</string>
    <string name="add_schedule_successfully">成功加入计划</string>
    <string name="fail_to_update_schedule">更新学习计划失败</string>
    <string name="search_box_tip">试试输入一些古诗题目或作者</string>
</resources>