<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="buttonText"
            type="String" />

        <variable
            name="model"
            type="com.yudi.udrop.model.data.ScheduleModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/bg_rectangle_shape"
        android:backgroundTint="@color/udrop_background_0"
        android:paddingHorizontal="11dp"
        android:paddingVertical="15dp">

        <TextView
            android:id="@+id/home_schedule_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/schedule_set"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/home_schedule_check_process"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/process_check"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/home_schedule_complete_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@{model.totalNumber}"
            android:textColor="@color/udrop_text_3"
            android:textSize="96sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_schedule_set"
            tools:text="15" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="首"
            android:textColor="@color/udrop_text_3"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@id/home_schedule_complete_number"
            app:layout_constraintStart_toEndOf="@id/home_schedule_complete_number" />

        <TextView
            android:id="@+id/home_schedule_process"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{model.process}"
            android:textColor="@color/udrop_text_3"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_schedule_complete_number"
            tools:text="已学 30/100" />

        <TextView
            android:id="@+id/home_schedule_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_rectangle_shape"
            android:backgroundTint="@color/udrop_text_3"
            android:paddingVertical="10dp"
            android:text="@{buttonText}"
            android:textAlignment="center"
            android:textColor="@color/udrop_text_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_schedule_process"
            tools:text="@string/start_to_learn" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
