<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_launch">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/launch_advertise"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/launch_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logo" />

        <ImageView
            android:id="@+id/launch_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:src="@drawable/txt_launch_logo" />
    </LinearLayout>


    <TextView
        android:id="@+id/launch_advertise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="40dp"
        android:text="你好，我是语滴智能背书助手~"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/launch_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_triangle_left"
        app:layout_constraintBottom_toBottomOf="@id/launch_login"
        app:layout_constraintEnd_toStartOf="@id/launch_login"
        app:layout_constraintTop_toTopOf="@id/launch_login" />

    <TextView
        android:id="@+id/launch_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_rectangle_shape"
        android:backgroundTint="@color/white"
        android:paddingVertical="11dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/udrop_text_1"
        app:layout_constraintBottom_toTopOf="@id/launch_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_triangle_right"
        app:layout_constraintBottom_toBottomOf="@id/launch_register"
        app:layout_constraintStart_toEndOf="@id/launch_register"
        app:layout_constraintTop_toTopOf="@id/launch_register" />

    <TextView
        android:id="@+id/launch_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/bg_rectangle_shape"
        android:backgroundTint="@color/white"
        android:paddingVertical="11dp"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@color/udrop_text_1"
        app:layout_constraintBottom_toTopOf="@id/launch_version"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/launch_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="@string/version"
        android:textColor="@color/udrop_text_0"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="版本：1.0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>