<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="toolbarModel"
            type="com.yudi.udrop.model.data.ToolbarModel" />

        <variable
            name="toolbarHandler"
            type="com.yudi.udrop.interfaces.ToolbarInterface" />

        <variable
            name="model"
            type="com.yudi.udrop.model.data.TextModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/text_detail_toolbar"
            layout="@layout/toolbar"
            app:handler="@{toolbarHandler}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:model="@{toolbarModel}" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/text_detail_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingHorizontal="24dp"
            android:paddingVertical="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_detail_toolbar">

            <TextView
                android:id="@+id/text_detail_collection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@{context.getDrawable(model.collectionIcon)}"
                android:drawablePadding="6dp"
                android:text="@{model.collectionText}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:drawableStart="@drawable/ic_home_collection"
                tools:text="@string/collect" />

            <androidx.core.widget.NestedScrollView
                android:id="@+id/text_datail_content"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="20dp"
                app:layout_constraintBottom_toTopOf="@id/recite_by_sentence"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_detail_collection">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingHorizontal="40dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{model.title}"
                        android:textColor="@color/udrop_text_1"
                        android:textSize="24sp"
                        tools:text="《静夜思》" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@{model.writer}"
                        android:textColor="@color/udrop_text_1"
                        android:textFontWeight="300"
                        android:textSize="14sp"
                        tools:text="李白" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="11dp"
                        android:text="@{model.context}"
                        android:textColor="@color/udrop_text_1"
                        android:textSize="16sp"
                        tools:text="床前明月光，疑是地上霜。举头望明月，低头思故乡。" />
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>

            <TextView
                android:id="@+id/recite_by_sentence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_rectangle_shape"
                android:backgroundTint="@color/udrop_text_3"
                android:paddingHorizontal="40dp"
                android:paddingVertical="10dp"
                android:text="@string/recite_by_sentence"
                android:textColor="@color/udrop_text_2"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_datail_content" />

            <TextView
                android:id="@+id/recite_whole"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_rectangle_shape"
                android:backgroundTint="@color/udrop_text_2"
                android:paddingHorizontal="40dp"
                android:paddingVertical="10dp"
                android:text="@string/recite_whole"
                android:textColor="@color/udrop_text_3"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_datail_content" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/about_writer_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:text="@string/about_writer"
            android:textColor="@color/udrop_text_2"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_detail_container" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/about_writer_tab">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_rectangle_shape"
                android:backgroundTint="@color/white_0"
                android:padding="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elegantTextHeight="true"
                    android:text="@{model.WriterInfo}"
                    android:textColor="@color/udrop_text_2"
                    android:textSize="12sp"
                    tools:text="        李白（701年—762年12月），字太白，号青莲居士，又号“谪仙人”，唐代伟大的浪漫主义诗人，被后人誉为“诗仙”，与杜甫并称为“李杜”，为了与另两位诗人李商隐与杜牧即“小李杜”区别，杜甫与李白又合称“大李杜”。" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
